attempt for dual socket stream

--- a/edgetpuvision_orig/streaming/assets/index.html
+++ b/edgetpuvision_orig/streaming/assets/index.html
@@ -18,7 +18,7 @@
 <body>
  
   <div id="container"></div>
-
+  <div id="container1"></div>
 
   <div id="myCanvas">
     <svg width='640' height='480' style=''>
