--- a/to_release/streaming/assets/index.html
+++ b/to_release/streaming/assets/index.html
@@ -10,8 +10,14 @@
   <script type="text/javascript" src="ws_client.js"></script>
 </head>
 <body>
-  <div id="container"></div>
-  <div id="container1"></div>
+  <div>
+
+    <div id="container"></div>
+    <div id="container1"></div>
+
+  </div>
+ 
   <p>test</p>
+  
 </body>
 </html>
