beta init for release

--- a/beta/streaming/assets/test.html
+++ b/beta/streaming/assets/test.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello Bulma!</title>
-    <link rel="stylesheet" href="../static/css/bulma.css">
+    <link rel="stylesheet" href="bulma.css">
     <!-- <link rel="stylesheet" href="static/css/bulma.css"> -->
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
