--- a/beta/streaming/assets/test.html
+++ b/beta/streaming/assets/test.html
@@ -72,13 +72,8 @@
   <script>
 
 
-var connections = [
-    { SSID: "xfinitywifi", SECURITY: "WPA2", SIGNAL: "20" },
-    { SSID: "Phone", SECURITY: "WPA2", SIGNAL: "100" },
-    { SSID: "My Wifi", SECURITY: "WPA2", SIGNAL: "30" },
-    { SSID: "Zip", SECURITY: "--", SIGNAL: "40" },
-    { SSID: "Comments", SECURITY: "--", SIGNAL: "50" }
-];
+var connections = { "Dasilva-Wifi": "WPA2", "ATTUMTu3Ys_2.4": "WPA2", "SKYNETgear-2.4": "WPA2", Spider: "WPA2", xfinitywifi: "--" }
+
 
 
 function reloadConnections() { 
@@ -91,35 +86,40 @@ function reloadConnections() {
         });
 
   $.getJSON('/json/connections.json', function (data) {
-  console.log(data, "connections")
+    fillConnections(data)
   });
 
 }
 function rebootDevice() {
 
 }
-for (var i = 0; i < connections.length; i += 1) {
-    console.log(connections[i].SSID)
+function fillConnections(connections) {
+  for (let [SSID, Security] of Object.entries(connections)) {
+    
     const div = document.createElement('a');
     div.className = 'dropdown-item';
 
     
-    switch (connections[i].SECURITY) {
+    switch (Security) {
         case 'WPA2':
             div.id = 'open-modal';
 
-            div.innerHTML = `${ connections[i].SSID} <i class="fas fa-lock is-pulled-right"> </i> `;
+            div.innerHTML = `${ SSID} <i class="fas fa-lock is-pulled-right"> </i> `;
             document.getElementById('dropdown-content').appendChild(div);
         break;
         default:
             div.id = 'no-modal';
-            div.innerHTML = `${ connections[i].SSID} `;
+            div.innerHTML = `${ SSID} `;
             document.getElementById('dropdown-content').appendChild(div);
 
 
     }
 
 }
+
+
+}
+
 
 function dropdown() {
 
